tests/ui/associated-type-bounds/conflicting-bounds-different-generics-simple.stderr
error: conflicting associated type bindings for `Assoc`
  --> $DIR/conflicting-bounds-different-generics-simple.rs:7:12
   |
LL | fn foo(_: &dyn Sub) {}
   |            ^^^^^^^
   |
   = note: `Assoc` (in `Super<i64>`) is specified to be `u64`
   = note: `Assoc` (in `Super<i32>`) is also specified to be `u32`

error: aborting due to 1 previous error

